--- a/compose.yml
+++ b/compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - POSTGRES_PASSWORD=postgres
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
       start_period: 1m
 
   plausible_events_db:
@@ -25,7 +25,11 @@ services:
         soft: 262144
         hard: 262144
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 -O - http://127.0.0.1:8123/ping || exit 1"]
+      test:
+        [
+          'CMD-SHELL',
+          'wget --no-verbose --tries=1 -O - http://127.0.0.1:8123/ping || exit 1',
+        ]
       start_period: 1m
 
   plausible:
@@ -82,9 +86,14 @@ services:
       - MAILGUN_BASE_URI
       - MANDRILL_API_KEY
       - SENDGRID_API_KEY
+    networks:
+      - dokploy-network
 
 volumes:
   db-data:
   event-data:
   event-logs:
   plausible-data:
+
+networks:
+  dokploy-network:
