--- a/compose.yml
+++ b/compose.yml
@@ -54,38 +54,38 @@ services:
       - SECRET_KEY_BASE=${SECRET_KEY_BASE}
       # optional: https://github.com/plausible/community-edition/wiki/configuration#optional
       # registration: https://github.com/plausible/community-edition/wiki/configuration#registration
-      - TOTP_VAULT_KEY
-      - DISABLE_REGISTRATION
-      - ENABLE_EMAIL_VERIFICATION
+      # - TOTP_VAULT_KEY
+      # - DISABLE_REGISTRATION
+      # - ENABLE_EMAIL_VERIFICATION
       # web: https://github.com/plausible/community-edition/wiki/configuration#web
       - HTTP_PORT
       - HTTPS_PORT
       # databases: https://github.com/plausible/community-edition/wiki/configuration#database
-      - DATABASE_URL=postgres://postgres:postgres@plausible_db:5432
+      - DATABASE_URL=postgres://postgres:postgres@plausible_db:5432/plausible
       - CLICKHOUSE_DATABASE_URL=http://plausible_events_db:8123
       # Google: https://github.com/plausible/community-edition/wiki/configuration#google
-      - GOOGLE_CLIENT_ID
-      - GOOGLE_CLIENT_SECRET
-      # geolocation: https://github.com/plausible/community-edition/wiki/configuration#ip-geolocation
-      - IP_GEOLOCATION_DB
-      - GEONAMES_SOURCE_FILE
-      - MAXMIND_LICENSE_KEY
-      - MAXMIND_EDITION
-      # email: https://github.com/plausible/community-edition/wiki/configuration#email
-      - MAILER_ADAPTER
-      - MAILER_EMAIL
-      - MAILER_NAME
-      - SMTP_HOST_ADDR
-      - SMTP_HOST_PORT
-      - SMTP_USER_NAME
-      - SMTP_USER_PWD
-      - SMTP_HOST_SSL_ENABLED
-      - POSTMARK_API_KEY
-      - MAILGUN_API_KEY
-      - MAILGUN_DOMAIN
-      - MAILGUN_BASE_URI
-      - MANDRILL_API_KEY
-      - SENDGRID_API_KEY
+      # - GOOGLE_CLIENT_ID
+      # - GOOGLE_CLIENT_SECRET
+      # # geolocation: https://github.com/plausible/community-edition/wiki/configuration#ip-geolocation
+      # - IP_GEOLOCATION_DB
+      # - GEONAMES_SOURCE_FILE
+      # - MAXMIND_LICENSE_KEY
+      # - MAXMIND_EDITION
+      # # email: https://github.com/plausible/community-edition/wiki/configuration#email
+      # - MAILER_ADAPTER
+      # - MAILER_EMAIL
+      # - MAILER_NAME
+      # - SMTP_HOST_ADDR
+      # - SMTP_HOST_PORT
+      # - SMTP_USER_NAME
+      # - SMTP_USER_PWD
+      # - SMTP_HOST_SSL_ENABLED
+      # - POSTMARK_API_KEY
+      # - MAILGUN_API_KEY
+      # - MAILGUN_DOMAIN
+      # - MAILGUN_BASE_URI
+      # - MANDRILL_API_KEY
+      # - SENDGRID_API_KEY
     networks:
       - dokploy-network
 
