--- a/compose.yml
+++ b/compose.yml
@@ -62,7 +62,7 @@ services:
       - HTTPS_PORT
       # databases: https://github.com/plausible/community-edition/wiki/configuration#database
       - DATABASE_URL=postgres://postgres:postgres@plausible_db:5432/plausible
-      - CLICKHOUSE_DATABASE_URL=http://plausible_events_db:8123
+      - CLICKHOUSE_DATABASE_URL=http://plausible_events_db:8123/plausible
       # Google: https://github.com/plausible/community-edition/wiki/configuration#google
       # - GOOGLE_CLIENT_ID
       # - GOOGLE_CLIENT_SECRET
